--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             box.img = imgs[i].img;
             box.title = imgs[i].title;
             box.url = imgs[i].url;
-            console.log(imgs.length);
+            // console.log(imgs.length);
             $('#container').append(box.template);
         };
         setTimeout(function(){
