--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/animate.css@3.5.2/animate.min.css">
     <script src="./data.js"></script>
     <script src="./template.js"></script>
-    <script src="http://libs.baidu.com/jquery/2.1.1/jquery.min.js"></script>
+    <script src="./bootstrap/jquery-3.2.1.js"></script>
 </head>
 <style>
 	.colum{
