--- a/photo/无缝的轮番图.html
+++ b/photo/无缝的轮番图.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>无缝的轮番图</title>
-        <script src="http://libs.baidu.com/jquery/2.1.1/jquery.min.js"></script>
+        <script src="./js/jquery-3.2.1.js"></script>
     </head>
     <style type="text/css">
         div.diswrap{
